REGRESSION(r77740): CSSStyleSelector accessing deleted memory for svg/dom/use-transform.svg https://bugs.webkit.org/show_bug.cgi?id=53900

Reviewed by Andreas Kling.

Ignore link elements in shadow trees.

* dom/Element.cpp:
(WebCore::StyleSelectorParentPusher::StyleSelectorParentPusher):
(WebCore::StyleSelectorParentPusher::~StyleSelectorParentPusher):

    Some asserts to catch cases like this.

(WebCore::Element::attach):
(WebCore::Element::recalcStyle):
* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::HTMLLinkElement):
(WebCore::HTMLLinkElement::process):
(WebCore::HTMLLinkElement::insertedIntoDocument):
(WebCore::HTMLLinkElement::removedFromDocument):
* html/HTMLLinkElement.h:



Canonical link: https://commits.webkit.org/67893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77834 268f45cc-cd09-0410-ab3c-d52691b4dbfc